# kaizenlint

./: .pre-commit-config.yaml  pyproject.toml
.kaizenlint/: config.toml
.kaizenlint/rules/: python_style.md
.kaizenlint/rules/japanese_comment_style/: 01_taigendome.md  02_teineigo.md  03_colon.md  04_spacing.md  05_comma.md  06_comma_space.md  07_chouon.md  08_katakana_compound.md  09_parentheses.md  10_english_terms.md  11_period.md  12_nakaguro.md  13_trailing_paren.md
.kaizenlint/rules/readable_code/: 01_basics.md  02_naming.md  03_comments.md  04_layout.md  05_control_flow.md  06_expressions.md  07_variables.md  08_functions.md  09_libraries.md  10_testing.md  11_review.md
src/kaizenlint/: __init__.py  checker.py  cli.py  config.py  executor.py  files.py  models.py  rules.py
tests/: test_applies_to.py  test_executor.py  test_stdin.py
